samples/_failures_safe/1761703891_0e38d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a3566dc.c: In function ‘tokenize’:
./samples/SAFE/__tmp_2a3566dc.c:171:5: error: expected expression at end of input
  171 |     if (token_count <
      |     ^~
./samples/SAFE/__tmp_2a3566dc.c:171:5: error: expected declaration or statement at end of input
